* detect removable disk
* detect optical disk
* determine optical disk sessions
* detect floppy
* detect bus type
* determine USB serial number
* use pre windows XP io control codes as fallback ?

Beta release
* remove deprecated functions in libsmdev_legacy.[ch]

Deployment
* add msvscpp files
* add borlandc files
* add macosx files

Test:
* add autoconf/make test suite

20100801
* update for mingw64

20100719
* updated include/error.h and liberror
* updated common, libuna

20100716
* updated libuna

20100714
* updated configure.ac
* updated include/error.h and liberror
* updated include/codepage.h
* updated list type
* updated offset list
* updated common, libuna

20100628
* updated common, libcstring, liberror, libnotify, libuna
* clean up

20100505
* updated configure.ac and Makefile.am files
* update libuna
* added missing libsmdev_definitions.h.in

20100502
* updated common. libcstring, liberror, libnotify, libuna
* changed amount of to number of

20100501
* updated common. libcstring

20100430
* worked on mingw support
* updated common, libcstring

20100418
* added libcstring
* updated common, liberror, libnotify, libuna
* email change

20100212
* worked on glob function

20100211
* worked on local use of libsmdev

20100202
* worked on retrieving media size when not set for read

20100201
* worked on metadata functions for libsmio
* completed libsmdev_handle_get_offset

20100126
* worked on solution for Debian 4.0 posix_fadvise break

20100124
* removed unused string and system macros
* updated common, liberror (snwprintf fix)

20100123
* worked on wide character functions
  - added system codepage support
* update for missing varadic macro support in Borland C++ Builder 5.5

20100121
* worked on winapi support

20100120
* added posix_fadvice

20100118
* worked on error listing

20100117
* worked on read error retries

20100116
* worked on initial version
* worked on read error retries

20100110