@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libsmdev],
-  [20100801],
+  [20100805],
   [jbmetz@users.sourceforge.net])
 
 AC_CONFIG_SRCDIR(
@@ -113,6 +113,9 @@ AC_CHECK_HEADERS([limits.h])
 
 dnl Headers included in common/memory.h and libcstring/libcstring_narrow_string.h
 AC_CHECK_HEADERS([stdlib.h string.h])
+
+dnl Headers included in libcstring/libcstring_locale.c
+AC_CHECK_HEADERS([langinfo.h locale.h])
 
 dnl Headers included in liberror/liberror_error.c and libnotify/libnotify_print.c
 AC_CHECK_HEADERS([stdarg.h])
@@ -319,6 +322,24 @@ AC_CHECK_FUNCS(
   [Missing function: realloc],
   [1]) ])
 
+dnl Check for environment functions in libcstring/libcstring_locale.c
+AC_CHECK_FUNCS(
+ [getenv],
+ [],
+ [AC_MSG_FAILURE(
+  [Missing function: getenv],
+  [1]) ])
+
+dnl Check for localization functions in libcstring/libcstring_locale.c
+AC_CHECK_FUNCS(
+ [setlocale],
+ [],
+ [AC_MSG_FAILURE(
+  [Missing function: setlocale],
+  [1]) ])
+
+LIBSMDEV_CHECK_FUNC_LANGINFO_CODESET
+
 dnl Narrow character string functions used in libcstring/libcstring_narrow_string.h
 AC_CHECK_FUNCS(
  [fgets],
@@ -410,6 +431,13 @@ AC_CHECK_FUNCS(
   [AC_MSG_FAILURE(
    [Missing functions: strncasecmp and strcasecmp],
    [1]) ]) ])
+
+AC_CHECK_FUNCS(
+ [strstr],
+ [],
+ [AC_MSG_FAILURE(
+  [Missing function: strstr],
+  [1]) ])
 
 AC_CHECK_FUNCS(
  [strtoll],
@@ -673,6 +701,13 @@ dnl Wide character string functions used in common/file_stream.h
     [AC_MSG_FAILURE(
      [Missing functions: wcsncasecmp, wcscasecmp and towlower],
      [1]) ]) ]) ])
+
+ AC_CHECK_FUNCS(
+  [wcsstr],
+  [],
+  [AC_MSG_FAILURE(
+   [Missing function: wcsstr],
+   [1]) ])
 
  AC_CHECK_FUNCS(
   [wcstoll],
