@@ -30,23 +30,31 @@
  */
 #define LIBSMDEV_VERSION_STRING				"@VERSION@"
 
-/* The libsmdev file access
+/* The access flags definitions
  * bit 1        set to 1 for read access
  * bit 2        set to 1 for write access
  * bit 3        set to 1 to truncate an existing file on write
  * bit 4-8      not used
  */
-#define LIBSMDEV_FLAG_READ				(uint8_t) 0x01
-#define LIBSMDEV_FLAG_WRITE				(uint8_t) 0x02
-#define LIBSMDEV_FLAG_TRUNCATE				(uint8_t) 0x04
+enum LIBSMDEV_ACCESS_FLAGS
+{
+	LIBSMDEV_ACCESS_FLAG_READ			= 0x01,
+	LIBSMDEV_ACCESS_FLAG_WRITE			= 0x02,
+	LIBSMDEV_ACCESS_FLAG_TRUNCATE			= 0x04
+};
 
 /* The libsmdev file access macros
  */
-#define LIBSMDEV_OPEN_READ				( LIBSMDEV_FLAG_READ )
-#define LIBSMDEV_OPEN_WRITE				( LIBSMDEV_FLAG_WRITE )
-#define LIBSMDEV_OPEN_READ_WRITE			( LIBSMDEV_FLAG_READ | LIBSMDEV_FLAG_WRITE )
-#define LIBSMDEV_OPEN_WRITE_TRUNCATE			( LIBSMDEV_FLAG_WRITE | LIBSMDEV_FLAG_TRUNCATE )
-#define LIBSMDEV_OPEN_READ_WRITE_TRUNCATE		( LIBSMDEV_FLAG_READ | LIBSMDEV_FLAG_WRITE | LIBSMDEV_FLAG_TRUNCATE )
+#define LIBSMDEV_OPEN_READ				( LIBSMDEV_ACCESS_FLAG_READ )
+#define LIBSMDEV_OPEN_WRITE				( LIBSMDEV_ACCESS_FLAG_WRITE )
+#define LIBSMDEV_OPEN_READ_WRITE			( LIBSMDEV_ACCESS_FLAG_READ | LIBSMDEV_ACCESS_FLAG_WRITE )
+#define LIBSMDEV_OPEN_WRITE_TRUNCATE			( LIBSMDEV_ACCESS_FLAG_WRITE | LIBSMDEV_ACCESS_FLAG_TRUNCATE )
+#define LIBSMDEV_OPEN_READ_WRITE_TRUNCATE		( LIBSMDEV_ACCESS_FLAG_READ | LIBSMDEV_ACCESS_FLAG_WRITE | LIBSMDEV_ACCESS_FLAG_TRUNCATE )
+
+/* TODO deprecated remove after a while */
+#define LIBSMDEV_FLAG_READ				LIBSMDEV_ACCESS_FLAG_READ
+#define LIBSMDEV_FLAG_WRITE				LIBSMDEV_ACCESS_FLAG_WRITE
+#define LIBSMDEV_FLAG_TRUNCATE				LIBSMDEV_ACCESS_FLAG_TRUNCATE
 
 /* The error flags definitions
  */
