@@ -276,7 +276,11 @@ enum LIBSMDEV_RUNTIME_ERROR
 
 	/* The value is unsupported
 	 */
-	LIBSMDEV_RUNTIME_ERROR_UNSUPPORTED_VALUE	= 14
+	LIBSMDEV_RUNTIME_ERROR_UNSUPPORTED_VALUE	= 14,
+
+	/* An abort was requested
+	 */
+	LIBSMDEV_RUNTIME_ERROR_ABORT_REQUESTED		= 15
 };
 
 /* TODO deprecated remove after a while */
